# consul-api

./: .editorconfig  .gitignore  Cargo.toml  README.md
scanner/: go.mod  head.rs  main.go
src/: lib.rs  structs.rs  structs_1_20_1.rs  structs_1_20_x.rs  structs_1_22_x.rs
