[package]
name = "consul-api"
version = "0.0.0-pre"
edition = "2021"
status = "in-development"
authors = ["PeiYu Cui <i@cuipeiyu.com>"]
license = "MIT OR Apache-2.0"
include = ["Cargo.toml", "src", "README.md", "LICENSE-*"]
exclude = ["*.png", "consul", "scanner"]
description = "consul api for rust"
homepage = "https://github.com/cuipeiyu/consul-api"
repository = "https://github.com/cuipeiyu/consul-api"
documentation = "https://docs.rs/consul_api"
categories = ["sdk"]
keywords = ["consul"]
readme = "README.md"

[features]
default = ["v1"]
full = ["v1", "enterprise"]
v1 = []
enterprise = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
