[package]
name = "consul-api"
version = "0.0.3-pre"
edition = "2021"
authors = ["PeiYu Cui <i@cuipeiyu.com>"]
license = "MIT OR Apache-2.0"
include = ["/Cargo.toml", "/src", "/README.md", "/LICENSE-*"]
description = "consul api for rust"
homepage = "https://github.com/cuipeiyu/consul-api"
repository = "https://github.com/cuipeiyu/consul-api"
documentation = "https://docs.rs/consul-api"
categories = ["api-bindings"]
keywords = ["consul", "HashiCorp", "client", "library"]
readme = "README.md"

[features]
default = ["v1"]
full = ["v1", "enterprise"]
v1 = ["v1_20_x"]
v1_20_x = []
enterprise = []

[dependencies]
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
